--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -35,7 +35,7 @@
   align-items: center;
   justify-content: center;
   
-  & > img {
+  & > svg {
     width: 15rem;
 
     @media screen and (max-width: 450px) {
