--- a/src/components/pages/home/hero/hero.module.css
+++ b/src/components/pages/home/hero/hero.module.css
@@ -8,7 +8,7 @@
 }
 
 .hero-container {
-  height: 100vh;
+  height: 100dvh;
   padding-top: min(10%, 100px);
   max-height: 100rem;
   display: flex;
