--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 :root {
+  --custom-article-bg-color: #D8ECF7;
+  --custom-article-dark-color: #247dae;
   --primary : #873bf6;
   --secondary: #9b5bf8;
   --error: #D20F46;
@@ -20,6 +22,13 @@
   --shadow-button: 5px 5px 7px 2px rgba(0, 0, 0, 0.13);
   --primary-transparent: #873bf650;
   --secondary-transparent: #9a5bf88e;
+
+  --slate-800: #1E293B;
+  --slate-600: #475569;
+  --slate-700: #334155;
+  --slate-500: #64748B;
+  --slate-300: #CBD5E1;
+
 
   /* FONT SIZE */
   --paragraph-size: 1.6rem;
