--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -4,7 +4,9 @@
   width: 100%;
   z-index: 100;
   transition: height 0.3s linear, transform 0.3s linear;
-  fill: #ffffff;
+  fill: var(--text-color, #ffffff);
+  color: var(--text-color, #ffffff);
+  background-color: var(--bg-color, transparent);
 
   &.scrolled {
     height: 8rem;
@@ -13,7 +15,7 @@
   }
 
   &.notScrolled {
-    height: 15rem;
+    height: var(--header-height, 15rem);
     border-bottom: none;
     backdrop-filter: blur(0);
   }
@@ -35,12 +37,16 @@
   align-items: center;
   justify-content: center;
   
-  & > svg {
+  & svg {
     width: 15rem;
 
     @media screen and (max-width: 450px) {
-      width: 10rem;
+      width: 12rem;
     }
+  }
+
+  & path {
+    transition: fill 0.1s linear;
   }
 }
 
@@ -127,7 +133,7 @@
       left: 0;
       width: 0;
       height: 2px;
-      background-color: var(--accent);
+      background-color: var(--custom-color, var(--accent));
       transition: all 0.2s linear;
     }
 
