--- a/src/components/ui/burger-button/burguer-button.module.css
+++ b/src/components/ui/burger-button/burguer-button.module.css
@@ -13,7 +13,7 @@
     width: 3rem;
     height: 0.2rem;
     opacity: 1;
-    background: var(--white);
+    background-color: var(--text-color, #ffffff);
     transition: all 0.3s ease;
   }
 
