--- a/src/components/ui/metadata-label/metadata-label.module.css
+++ b/src/components/ui/metadata-label/metadata-label.module.css
@@ -6,8 +6,25 @@
   & span {
     color: var(--slate-500, #64748B);
     text-align: center;
-    font-size: 11px;
     font-weight: 500;
     padding-top: 3px;
+  }
+
+  &.small span {
+    font-size: 11px;
+  }
+
+  &.small svg {
+    width: 16px;
+    height: 16px;
+  }
+  
+  &.medium span {
+    font-size: 12px;
+  }
+
+  &.medium svg {
+    width: 18px;
+    height: 18px;
   }
 }
