--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,8 +26,11 @@
   --slate-800: #1E293B;
   --slate-600: #475569;
   --slate-700: #334155;
+  --slate-600: #475569;
   --slate-500: #64748B;
+  --slate-400: #94A3B8;
   --slate-300: #CBD5E1;
+  --slate-100: #F1F5F9;
 
 
   /* FONT SIZE */
