--- a/src/app/blog/blog.css
+++ b/src/app/blog/blog.css
@@ -1,3 +1,8 @@
-.blog-background {
+.blog {
+  padding-top: 10rem;
   background: var(--custom-article-bg-color, #d8ecf7);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
 }
