--- a/src/components/pages/blog/recent-card/recent-card.module.css
+++ b/src/components/pages/blog/recent-card/recent-card.module.css
@@ -16,6 +16,11 @@
     font-style: normal;
     font-weight: 600;
     line-height: 24px;
+    transition: color 0.1s linear;
+
+    &:hover {
+      color: var(--custom-dark-color);
+    }
   }
 
   & p {
@@ -32,7 +37,8 @@
   height: 150px;
   align-self: stretch;
 
-  & img {
+  & a, img {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
