fix: fix pure selector

--- a/src/components/pages/blog/recent-card/recent-card.module.css
+++ b/src/components/pages/blog/recent-card/recent-card.module.css
@@ -37,7 +37,7 @@
   height: 150px;
   align-self: stretch;
 
-  & a, img {
+  & a, & img {
     display: block;
     width: 100%;
     height: 100%;
