refactor: adjust list item styles in markdown component for improved readability

--- a/src/components/pages/blog/markdown-components/markdown-componets.module.css
+++ b/src/components/pages/blog/markdown-components/markdown-componets.module.css
@@ -72,6 +72,9 @@ p.text {
   padding-left: 2rem;
 
   & li {
+    font-size: 1.7rem;
+    line-height: 1.5;
+    font-weight: 400;
     margin-bottom: 1rem;
   }
 }
