--- a/src/components/pages/home/aditional-services/aditional-services.module.css
+++ b/src/components/pages/home/aditional-services/aditional-services.module.css
@@ -1,19 +1,24 @@
 .aditional-services {
   display: flex;
   flex-direction: column;
-  align-items: center;
   color: var(--text-contrast);
   padding: 5rem 0;
 
   & h2 {
     text-align: center;
     color: var(--text-h-contrast);
+
+    @media screen and (max-width: 450px) {
+      text-align: left;
+    }
   }
 
   & > p {
     margin-top: 3rem;
     max-width: 800px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     font-size: var(--paragraph-responsive);
 
     @media screen and (max-width: 450px) {
