--- a/src/components/pages/home/blog/blog.module.css
+++ b/src/components/pages/home/blog/blog.module.css
@@ -8,16 +8,22 @@
 .blog-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 
   & h2 {
+    text-align: center;
     color: var(--text-h-contrast);
+
+    @media screen and (max-width: 450px) {
+      text-align: left;
+    }
   }
 
   & p {
     width: 100%;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 1.5rem;
     font-size: var(--paragraph-responsive);
     
