--- a/src/components/pages/home/contact/contact.module.css
+++ b/src/components/pages/home/contact/contact.module.css
@@ -47,6 +47,10 @@
   & h2 {
     color: var(--text-h-contrast);
     font-size: clamp(3rem, 8vw, 5rem);
+
+    @media screen and (max-width: 450px) {
+      text-align: left;
+    }
   }
 
   & > p {
