--- a/src/components/pages/home/services/services.module.css
+++ b/src/components/pages/home/services/services.module.css
@@ -9,13 +9,16 @@
 .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   color: var(--text-contrast);
   text-align: center;
 
   & h2 {
     font-weight: 600;
     color: var(--text-h-contrast);
+
+    @media screen and (max-width: 450px) {
+      text-align: left;
+    }
   }
 
   & p {
@@ -23,6 +26,8 @@
     max-width: 800px;
     font-weight: 400;
     margin-top: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
     font-size: var(--paragraph-responsive);
 
     @media screen and (max-width: 450px) {
