--- a/src/components/pages/home/services/services.module.css
+++ b/src/components/pages/home/services/services.module.css
@@ -46,23 +46,15 @@
   @media screen and (max-width: 1200px) {
     grid-template-columns: repeat(12, 1fr);
 
-    & > div:nth-child(-n + 3) {
+    & > article:nth-child(-n + 3) {
       grid-column: span 4;
-    }
-
-    & > div:nth-child(n + 4) {
-      grid-column: span 6;
     }
   }
 
-  @media screen and (max-width: 768px) {
-    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
+  @media screen and (max-width: 992px) {
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
 
-    & > div:nth-child(-n + 3) {
-      grid-column: unset;
-    }
-
-    & > div:nth-child(n + 4) {
+    & > article:nth-child(-n + 3) {
       grid-column: unset;
     }
   }
