--- a/src/components/pages/home/hero/hero.module.css
+++ b/src/components/pages/home/hero/hero.module.css
@@ -9,6 +9,7 @@
 
 .hero-container {
   height: 100dvh;
+  min-height: 90rem;
   padding-top: min(10%, 100px);
   max-height: 100rem;
   display: flex;
@@ -26,6 +27,16 @@
       align-self: flex-start;
     }
 
+    @media screen and (max-width: 992px) {
+      width: 95%;
+      align-items: center;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 80%;
+      align-items: center;
+    }
+
     @media screen and (max-width: 450px) {
       width: 100%;
       margin: auto;
@@ -37,7 +48,7 @@
     }
 
     & h1 {
-      font-size: clamp(3.5rem, 5vw, 6rem);
+      font-size: clamp(3.5rem, 4.5vw, 6rem);
       line-height: 1.2;
       font-weight: 600;
       color: var(--white);
@@ -113,9 +124,9 @@
 
   & > div {
     position: relative;
-    width: 80%;
-    height: 80%;
-    min-width: 550px;
+    width: 100%;
+    height: 65%;
+    min-width: 450px;
     border-radius: 50px 50px 30% 50px;
     max-height: 550px;
     -webkit-box-shadow: var(--shadow-dark);
@@ -123,8 +134,8 @@
     box-shadow: var(--shadow-dark);
 
     @media screen and (max-width: 992px) {
-      min-width: 400px;
-      max-height: 500px;
+      min-width: 380px;
+      max-height: 380px;
     }
 
     & img {
