--- a/src/components/pages/blog/article/article.module.css
+++ b/src/components/pages/blog/article/article.module.css
@@ -4,8 +4,11 @@
   width: 100%;
   padding: 2.4rem;
 
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 768px) {
     padding: 1.6rem;
+  }
+  @media screen and (max-width: 450px) {
+    padding: 0rem;
   }
 }
 
@@ -17,7 +20,11 @@
   margin-top: -10rem;
   background-color: var(--white);
   
+  @media screen and (max-width: 768px) {
+    padding: 3.6rem 2.4rem;
+  }
+
   @media screen and (max-width: 450px) {
-    padding: 5.6rem 1.2rem;
+    padding: 3.6rem 1.2rem;
   }
 }
