refactor: replace h1 tag with dynamic tag and rename noAnchors prop in hero component

--- a/src/app/blog/blog.css
+++ b/src/app/blog/blog.css
@@ -6,3 +6,12 @@
   align-items: stretch;
   justify-content: center;
 }
+
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  clip: rect(1px, 1px, 1px, 1px);
+  overflow: hidden;
+}
