style: add custom background color for navbar in layout and blog components

--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -64,7 +64,7 @@
     top: 0;
     right: 0;
     height: 110vh;
-    background-color: var(--secondary);
+    background-color: var(--navbar-custom-bg, #9b5bf8);
     color: var(--white);
     transform: translateX(100%);
     transition: transform 0.3s ease;
