--- a/src/components/pages/blog/markdown-components/markdown-componets.module.css
+++ b/src/components/pages/blog/markdown-components/markdown-componets.module.css
@@ -4,6 +4,11 @@
 
 .text {
   color: var(--text-h-contrast);
+  line-height: 1.5;
+
+  @media screen and (max-width: 450px) {
+    line-height: 1.3;
+  }
 }
 
 h1.text {
@@ -11,44 +16,38 @@ h1.text {
 }
 
 h2.text {
-  font-size: 2.8rem;
-  line-height: 1.5;
+  font-size: clamp(2.4rem, 5vw, 2.8rem);
   font-weight: 500;
   margin: 5rem 0 2rem 0;
 }
 
 h3.text {
-  font-size: 2.4rem;
-  line-height: 1.5;
+  font-size: clamp(2.2rem, 4vw, 2.4rem);
   font-weight: 500;
   margin: 5rem 0 2rem 0;
 }
 
 h4.text {
-  font-size: 2.2rem;
-  line-height: 1.5;
+  font-size: clamp(2rem, 4vw, 2.2rem);
   font-weight: 500;
   margin: 5rem 0 2rem 0;
 }
 
 h5.text {
-  font-size: 2rem;
-  line-height: 1.5;
+  font-size: clamp(1.8rem, 4vw, 2rem);
   font-weight: 500;
   margin: 5rem 0 2rem 0;
 }
 
 h6.text {
-  font-size: 2rem;
-  line-height: 1.5;
+  font-size: clamp(1.8rem, 4vw, 2rem);
   font-weight: 500;
   margin: 5rem 0 2rem 0;
 }
 
 p.text {
   color: #2d3442;
-  font-size: 1.7rem;
-  line-height: 1.5;
+  font-size: clamp(1.6rem, 2.5vw, 1.7rem);
   font-weight: 400;
   margin-bottom: 2rem;
 }
@@ -72,8 +71,7 @@ p.text {
   padding-left: 2rem;
 
   & li {
-    font-size: 1.7rem;
-    line-height: 1.5;
+    font-size: clamp(1.6rem, 2.5vw, 1.7rem);
     font-weight: 400;
     margin-bottom: 1rem;
   }
