--- a/src/components/pages/home/about/about.module.css
+++ b/src/components/pages/home/about/about.module.css
@@ -1,8 +1,12 @@
 .about {
   margin: 0;
-  padding: 5rem 0;
+  padding: 10rem 0 5rem 0;
   background: var(--white);
   color: var(--text-contrast);
+
+  @media screen and (max-width: 450px) {
+    padding: 5rem 0;
+  }
 }
 
 .container {
@@ -27,10 +31,6 @@
 
   & article:not(:last-child) {
     margin-bottom: 3.2rem;
-  }
-
-  & h2 {
-    color: var(--text-h-contrast);
   }
 
   & p {
