--- a/src/components/pages/home/services/services.module.css
+++ b/src/components/pages/home/services/services.module.css
@@ -1,9 +1,13 @@
 .services {
   margin: 0;
-  padding: 10rem 0;
+  padding: 10rem 0 5rem 0;
   background: var(--white);
   position: relative;
   z-index: 1;
+
+  @media screen and (max-width: 450px) {
+    padding: 5rem 0;
+  }
 }
 
 .header {
@@ -12,26 +16,19 @@
   color: var(--text-contrast);
   text-align: center;
 
-  & h2 {
-    font-weight: 600;
-    color: var(--text-h-contrast);
-
-    @media screen and (max-width: 450px) {
-      text-align: left;
-    }
-  }
-
   & p {
     width: 100%;
     max-width: 800px;
     font-weight: 400;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
     font-size: var(--paragraph-responsive);
+    text-wrap: balance;
 
     @media screen and (max-width: 450px) {
       text-align: left;
+      text-wrap: wrap;
     }
   }
 }
