style: update text-contrast color for improved readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
   --white: #FFFFFF;
   --text: #FFFFFF;
   --text-hover: #E4E4E4;
-  --text-contrast: #4b5563;
+  --text-contrast: #3f4753;
   --text-contrast-transparent: #9ca3af; 
   --text-h-contrast: #111827;
   --accent: #ca78ff;
