--- a/src/components/pages/blog/markdown-components/markdown-componets.module.css
+++ b/src/components/pages/blog/markdown-components/markdown-componets.module.css
@@ -17,36 +17,36 @@ h1.text {
 
 h2.text {
   font-size: clamp(2.4rem, 5vw, 2.8rem);
-  font-weight: 500;
+  font-weight: 600;
   margin: 5rem 0 2rem 0;
 }
 
 h3.text {
-  font-size: clamp(2.2rem, 4vw, 2.4rem);
-  font-weight: 500;
-  margin: 5rem 0 2rem 0;
+  font-size: clamp(2rem, 4vw, 2.2rem);
+  font-weight: 600;
+  margin: 3.5rem 0 2rem 0;
 }
 
 h4.text {
-  font-size: clamp(2rem, 4vw, 2.2rem);
-  font-weight: 500;
+  font-size: clamp(1.8rem, 4vw, 2rem);
+  font-weight: 600;
   margin: 5rem 0 2rem 0;
 }
 
 h5.text {
   font-size: clamp(1.8rem, 4vw, 2rem);
-  font-weight: 500;
+  font-weight: 600;
   margin: 5rem 0 2rem 0;
 }
 
 h6.text {
   font-size: clamp(1.8rem, 4vw, 2rem);
-  font-weight: 500;
+  font-weight: 600;
   margin: 5rem 0 2rem 0;
 }
 
 p.text {
-  color: #2d3442;
+  color: var(--slate-700);
   font-size: clamp(1.6rem, 2.5vw, 1.7rem);
   font-weight: 400;
   margin-bottom: 2rem;
@@ -75,4 +75,8 @@ p.text {
     font-weight: 400;
     margin-bottom: 1rem;
   }
+}
+
+.hr {
+  margin: 5rem 0;
 }
