style: improve layout consistency

--- a/src/components/pages/blog/explore/explore.module.css
+++ b/src/components/pages/blog/explore/explore.module.css
@@ -68,7 +68,7 @@
 .recent-cards {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: 3.2rem;
   
   &::-webkit-scrollbar {
