--- a/src/components/pages/home/blog/blog.module.css
+++ b/src/components/pages/home/blog/blog.module.css
@@ -33,7 +33,7 @@
 
 .cards-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap: 1.5rem;
   margin-top: 3rem;
   padding: 1.2rem 0;
