--- a/src/components/pages/blog/markdown-components/markdown-componets.module.css
+++ b/src/components/pages/blog/markdown-components/markdown-componets.module.css
@@ -56,7 +56,7 @@ p.text {
   margin: 3rem 0 4rem 0;
   width: 100%;
   height: auto;
-  aspect-ratio: 16 / 9;
+  /* aspect-ratio: 16 / 9; */
 }
 
 .anchor {
