--- a/src/components/pages/home/hero/hero.module.css
+++ b/src/components/pages/home/hero/hero.module.css
@@ -108,7 +108,7 @@
     width: 100%;
     height: 65%;
     min-width: 450px;
-    border-radius: 50px 50px 30% 50px;
+    border-radius: 36px;
     max-height: 550px;
     -webkit-box-shadow: var(--shadow-dark);
     -moz-box-shadow: var(--shadow-dark);
@@ -122,7 +122,7 @@
     & img {
       width: 100%;
       height: 100%;
-      border-radius: 50px 50px 30% 50px;
+      border-radius: 36px;
       object-fit: cover;
     }
   }
