style: add anchor color variable to globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --error: #D20F46;
   --primary-accent: #fc6a6a;
   --primary-accent-hover: #ed696c;
+  --anchor-color: #1b6aff;
   --success: #96ff6c;
   --background : #A7B0C1;
   --border-card: #76767645;
