style: replace anchor color with CSS variable

--- a/src/components/pages/blog/markdown-components/markdown-componets.module.css
+++ b/src/components/pages/blog/markdown-components/markdown-componets.module.css
@@ -60,7 +60,7 @@ p.text {
 }
 
 .anchor {
-  color: rgb(27, 106, 255);
+  color: var(--anchor-color);
   text-decoration: underline;
   text-underline-offset: 0.3rem;
 }
